--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -26,6 +26,9 @@
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" th:href="@{/nyt/test}">Test</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" th:href="@{/search}">Search</a>
+            </li>
           </ul>
         </li>
       </div>
