--- a/src/main/resources/templates/search-results.html
+++ b/src/main/resources/templates/search-results.html
@@ -10,7 +10,7 @@
 
     <div class="container">
         <div class="bg-light p-4 rounded m-2">
-            <h1 class="display-4">Search Results: "covid"</h1>
+            <h1 class="display-4" th:text="'Search Results: ' + ${searchItem}"></h1>
             <th:block th:unless="${articleList.isEmpty()}">
                 <div class="row justify-content-center">
                     <div class="col-auto" th:each="article: ${articleList}">
